Fixed layout shift issues

--- a/src/components/Resource.less
+++ b/src/components/Resource.less
@@ -92,7 +92,9 @@ Resource Cards
     }
     > img {
         width: 250px;
+        min-width: 250px;
         height: 250px;
+        min-height: 250px;
         display: block;
         -o-object-fit: cover;
         object-fit: cover;
